--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -7,11 +7,11 @@
     <ItemGroup>
         <None Include="index.html" />
         <None Include="paket.references" />
-        <Compile Include="Components/NonLoginLayout.fs" />
-        <Compile Include="Components/LoginLayout.fs" />
-        <Compile Include="Components/LoginForm.fs" />
-        <Compile Include="Components\RegisterForm.fs" />
-        <Compile Include="Components\GuestHome.fs" />
+        <Compile Include="Components\LayoutGuess.fs" />
+        <Compile Include="Components\LayoutLoggedIn.fs" />
+        <Compile Include="Components\PageRegister.fs" />
+        <Compile Include="Components\PageGuestHome.fs" />
+        <Compile Include="Components\PageLogin.fs" />
         <Compile Include="Conduit.fs" />
         <Compile Include="App.fs" />
     </ItemGroup>
