--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -12,6 +12,7 @@
         <Compile Include="Components\PageRegister.fs" />
         <Compile Include="Components\PageGuestHome.fs" />
         <Compile Include="Components\PageLogin.fs" />
+        <Compile Include="Components\PageLoggedInHome.fs" />
         <Compile Include="Conduit.fs" />
         <Compile Include="App.fs" />
     </ItemGroup>
