--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -8,6 +8,7 @@
         <None Include="index.html" />
         <None Include="paket.references" />
         <Compile Include="Exension.fs" />
+        <Compile Include="Api.fs" />
         <Compile Include="Components\LayoutGuess.fs" />
         <Compile Include="Components\LayoutLoggedIn.fs" />
         <Compile Include="Components\PageRegister.fs" />
