--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
   "homepage": "https://qwik.builder.io/",
   "license": "",
   "private": true,
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "axios": "^0.27.2"
+  }
 }
