--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "eslint": "8.22.0",
     "eslint-plugin-qwik": "0.0.108",
     "express": "4.17.3",
-    "husky": "^8.0.0",
     "node-fetch": "3.2.10",
     "prettier": "2.7.1",
     "pretty-quick": "^3.1.3",
     "typescript": "4.7.4",
-    "vite": "3.0.9"
+    "vite": "3.0.9",
+    "husky": "^8.0.0"
   },
   "engines": {
     "node": "^14.18.0 || >=16.0.0"
