--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build --ssr src/entry.cloudflare-pages.tsx",
     "build.types": "tsc --incremental --noEmit",
+    "postbuild": "cp _headers ./dist && cp _redirects ./dist",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
