--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,14 @@ jobs:
     steps:
       # SET UP
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
+          java-version: 17
+          distribution: temurin
+          cache: gradle
 
       - name: Install Node.js
         uses: actions/setup-node@v1
@@ -24,12 +26,5 @@ jobs:
           node-version: 12.x
 
       # BUILD
-      - name: Restore Cache
-        uses: actions/cache@v1
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: ${{ runner.os }}-gradle-
-
       - name: Build & Test
         run: .github/pre-push.sh
