--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,25 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/dist
+# Python # 
+*.py[cod] 
+*$py.class 
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+# Django #
+*.log
+*.pot
+*.pyc
+__pycache__
+db.sqlite3
+media
+
+# Distribution / packaging 
+dist/
+
+# Environments 
+.env 
+.venv 
+env/ 
+venv/ 
 
 # IDE - VSCode
 .vscode/*
@@ -20,14 +28,3 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
-
-
-#System Files
-.DS_Store
-Thumbs.db
-
-
-#log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
