--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 *.sublime-workspace
 .metals/
 
+
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
@@ -38,3 +39,4 @@ yarn-error.log*
 target
 metals.sbt
 project/project
+/.bsp/*
