--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,18 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
+        id: checkout
         uses: actions/checkout@v3
       - name: Setup JDK
+        id: setup-jdk
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
           cache: 'sbt'
+      - name: Check formatting
+        id: check-formatting
+        run: sbt scalafmtCheckAll
       - name: Test
+        id: test
         run: sbt -v +test
