--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -7,16 +7,16 @@
     <ItemGroup>
         <None Include="index.html" />
         <None Include="paket.references" />
+        <Compile Include="Models.fs" />
         <Compile Include="Exension.fs" />
         <Compile Include="Api.fs" />
-        <Compile Include="Components\LayoutGuess.fs" />
-        <Compile Include="Components\LayoutLoggedIn.fs" />
+        <Compile Include="Components\Navigation.fs" />
         <Compile Include="Components\PageRegister.fs" />
-        <Compile Include="Components\PageHome.fs" />
         <Compile Include="Components\PageLogin.fs" />
-        <Compile Include="Components\PageLoggedInHome.fs" />
+        <Compile Include="Components\PageHome.fs" />
         <Compile Include="Conduit.fs" />
         <Compile Include="App.fs" />
+        <Compile Include="Models.fs" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Shared\Shared.fsproj" />
